# evm

./: CHANGELOG.md  Cargo.toml  deny.toml
.config/: zepter.yaml
.github/workflows/: ci.yml
crates/evm/: Cargo.toml
crates/evm/src/: call.rs  either.rs  env.rs  error.rs  eth.rs  evm.rs  factory_ext.rs  journal.rs  lib.rs  overrides.rs  precompiles.rs  rpc_utils.rs  spec.rs  tracer.rs  tracing.rs  traits.rs  tx.rs
crates/evm/src/block/: bal.rs  calc.rs  error.rs  exec_hook.rs  mod.rs  state.rs  state_changes.rs  state_hook.rs
crates/evm/src/block/system_calls/: eip2935.rs  eip4788.rs  eip7002.rs  eip7251.rs  eip7997.rs  eip8282.rs  mod.rs
crates/evm/src/eth/: block.rs  eip6110.rs  eip7997.rs  env.rs  mod.rs  receipt_builder.rs  spec_id.rs  utils.rs
crates/evm/src/op/: block.rs  env.rs  mod.rs  rpc.rs  tx.rs
crates/op-evm/: Cargo.toml
crates/op-evm/src/: env.rs  lib.rs
crates/op-evm/src/block/: mod.rs  receipt_builder.rs
crates/spec/: Cargo.toml
crates/spec/src/: eth.rs
scripts/: check_no_std.sh
