[package]
name = "alloy-evm"
description = "EVM abstraction for Alloy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-evm-spec = { workspace = true, features = ["revm-compat"] }
alloy-consensus.workspace = true
revm.workspace = true
revm-database.workspace = true

derive_more.workspace = true

[features]
default = ["std"]
std = [
	"alloy-consensus/std",
	"alloy-evm-spec/std",
	"revm/std",
	"revm-database/std"
]
