[package]
name = "alloy-evm"
description = "EVM abstraction for Alloy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-eips.workspace = true
alloy-hardforks.workspace = true

revm.workspace = true
op-revm = { workspace = true, optional = true }
op-alloy-consensus = { workspace = true, optional = true }

auto_impl.workspace = true
derive_more.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
serde_json.workspace = true

[features]
default = ["std"]
secp256k1 = [
    "std",
    "alloy-consensus/secp256k1",
]
std = [
    "alloy-primitives/std",
    "revm/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-sol-types/std",
    "derive_more/std",
    "op-revm?/std",
    "thiserror/std",
    "op-alloy-consensus?/std",
    "serde?/std"
]

dev = [
    "revm/dev",
    "op-revm?/dev"
]

serde = [
    "dep:serde",
    "revm/serde",
    "op-revm?/serde",
    "alloy-primitives/serde",
    "alloy-eips/serde",
    "alloy-consensus/serde",
    "alloy-hardforks/serde",
    "op-alloy-consensus?/serde"
]

op = ["op-revm", "op-alloy-consensus"]
